# 6502-Emulator

./: CMakeLists.txt  README.md
cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/tests/unit_tests/: CTestTestfile.cmake  LR35902_tests[1]_include.cmake  Makefile  Memory_tests[1]_include.cmake  cmake_install.cmake
scripts/: build.sh  configure.sh
src/: CPU6502.cpp  CPU6502.h  emulator.cpp
tests/unit_tests/: CMakeLists.txt
